--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portpolio</title>
-    <link href="/새소개/index1.css" rel="stylesheet">
-    <script src="/새소개/index.js" defer></script>
+    <link href="/index1.css" rel="stylesheet">
+    <script src="/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Jua&family=Merriweather:ital@0;1&family=Permanent+Marker&family=Satisfy&family=Work+Sans:wght@400;500;800&display=swap" rel="stylesheet">
