--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portpolio</title>
+    <title>profile</title>
     <link href="/profile/index1.css" rel="stylesheet">
     <script src="/profile/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="mainWrapper">
-            <iframe src="/새소개/세부/about.html"></iframe>
+            <iframe src="/profile/about.html"></iframe>
         </div>
     </div>
 </body>
