--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
-    <link href="/새소개/세부/about.css" rel="stylesheet">
-    <script src="/새소개/세부/about.js" defer></script>
+    <link href="/profile/about.css" rel="stylesheet">
+    <script src="/profile/about.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Jua&family=Merriweather:ital@0;1&family=Permanent+Marker&family=Satisfy&family=Work+Sans:wght@400;500;800&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
     <div class="mainWrapper">
         <div class="mainWrapperRight">
             <div class="img trans">
-                <img id="first" src="/새소개/세부/1.JPG">
-                <img id="second" src="/새소개/세부/2.JPG">
-                <img id="third" src="/새소개/세부/3.jpg">
-                <img id="fourth" src="/새소개/세부/1.JPG">
+                <img id="first" src="/profile/1.JPG">
+                <img id="second" src="/profile/2.JPG">
+                <img id="third" src="/profile/3.jpg">
+                <img id="fourth" src="/profile/1.JPG">
             </div>
         </div>
         <div class="mainWrapperLeft">
